--- a/project2.html
+++ b/project2.html
@@ -4,6 +4,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Edson Martins - Lista de contatos</title>
         <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
+        <link href="css/bootstrap.min.css">
+        <script type="js/bootstrap.bundle.min"></script>
+        <script type="text/jquery-3.5.1.min"></script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#141414"/>
@@ -26,7 +29,7 @@
             <div class="description_box">
                 <img id="display" src="./images/project2display.png" alt="Lista de contatos">
                 <h2>Lista que salva o nome, o telefone e o e-mail de contatos usando javascript. <a id="acess" href="./contatos/index.html">Clique aqui para acessar.</a></h2>
-                
+
                 <a id="back" href="./index.html"><h3>Voltar</h3></a>
             </div>
         </section>
