--- a/project6.html
+++ b/project6.html
@@ -4,6 +4,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Edson Martins - Dado</title>
         <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
+        <link href="css/bootstrap.min.css">
+        <script type="js/bootstrap.bundle.min"></script>
+        <script type="text/jquery-3.5.1.min"></script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#141414"/>
