--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Portfólio</title>
-        <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
-        <link href="css/bootstrap.min.css">
-        <script type="js/bootstrap.bundle.min"></script>
-        <script type="text/jquery-3.5.1.min"></script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#141414"/>
+        <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -28,7 +26,32 @@
             <h1>Sobre</h1>
             <div class="about_box">
                 <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h2>
-                <img id="photo" src="./images/me.png" alt="">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                  <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  </ol>
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img class="d-block w-100" src="images/project1display.png" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="images/project2display.png" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="images/project1display.png" alt="Third slide">
+                    </div>
+                  </div>
+                  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </div>
                 <div class="socials">
                     <a href="" target="_blank"><img id="discord" onmouseover="on_discord()" onmouseout="off_discord()" src="./images/discord.png" alt="Discord"></a>
                     <a href="" target="_blank"><img id="opgg" onmouseover="on_opgg()" onmouseout="off_opgg()" src="./images/opgg.png" alt="OP.GG"></a>
@@ -40,13 +63,13 @@
             <h1>Projetos</h1>
             <div class="flex_images">
                 <div class="row_images">
-                    <div class="card" id="strip">
+                    <div class="cardi" id="strip">
                         <a href="./project1.html">
                             <img id="img" src="./images/project1.png" alt="Site de notícias">
                             <p id="title">Site de notícias</p>
                         </a>
                     </div>
-                    <div class="card">
+                    <div class="cardi">
                         <a href="./project2.html">
                             <img id="img" src="./images/project2.png" alt="Lista de contatos">
                             <p id="title">Lista de contatos</p>
@@ -54,13 +77,13 @@
                     </div>
                 </div>
                 <div class="row_images">
-                    <div class="card" id="strip">
+                    <div class="cardi" id="strip">
                         <a href="./project3.html">
                             <img id="img" src="./images/project3.png" alt="Relógio">
                             <p id="title">Relógio</p>
                         </a>
                     </div>
-                    <div class="card">
+                    <div class="cardi">
                         <a href="./project4.html">
                             <img id="img" src="./images/project4.png" alt="Lâmpada">
                             <p id="title">Lâmpada</p>
@@ -68,13 +91,13 @@
                     </div>
                 </div>
                     <div class="row_images">
-                    <div class="card" id="strip">
+                    <div class="cardi" id="strip">
                         <a href="./project5.html">
                             <img id="img" src="./images/project5.png" alt="Loteria">
                             <p id="title">Loteria</p>
                         </a>
                     </div>
-                    <div class="card">
+                    <div class="cardi">
                         <a href="./project6.html">
                             <img id="img" src="./images/project6.png" alt="Dado">
                             <p id="title">Dado</p>
@@ -109,12 +132,15 @@
         <div id="mobile_menu" class="overlay">
             <a class="close">&times;</a>
             <div class="overlay_content">
-                <a href="#about">Sobre</a>
-                <a href="#projects">Projetos</a>
-                <a href="#contact">Contato</a>
+                <a class="close-s" href="#about">Sobre</a>
+                <a class="close-p" href="#projects">Projetos</a>
+                <a class="close-c" href="#contact">Contato</a>
             </div>
         </div>
-        <script type="text/javascript" src="jquery.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
         <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
