--- a/project1.html
+++ b/project1.html
@@ -5,11 +5,11 @@
         <title>Edson Martins - Site de notícias</title>
         <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
         <link href="css/bootstrap.min.css">
-        <script type="js/bootstrap.bundle.min"></script>
-        <script type="text/jquery-3.5.1.min"></script>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#141414"/>
+        <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="project.css">
     </head>
     <body>
@@ -27,7 +27,7 @@
         <section id="description">
             <h1>Site de notícias</h1>
             <div class="description_box">
-                <img id="display" src="./images/project1display.png" alt="Site de notícias">
+                <img id="display" class="img-fluid" src="./images/project1display.png" alt="Site de notícias">
                 <h2>Site de notícias desenvolvido por Edson Martins e Leonardo de Carvalho como trabalho final do primeiro bimestre da disciplina de Desenvolvimento de Web 1 no Instituto Federal de Mato Grosso do Sul - IFMS de Ponta Porã.</h2>
                 <a id="back" href="./index.html"><h3>Voltar</h3></a>
             </div>
@@ -44,12 +44,13 @@
         <div id="mobile_menu" class="overlay">
             <a class="close">&times;</a>
             <div class="overlay_content">
-                <a href="#about">Sobre</a>
-                <a href="#projects">Projetos</a>
-                <a href="#contact">Contato</a>
+              <a class="close-s" href="#about">Sobre</a>
+              <a class="close-p" href="#projects">Projetos</a>
+              <a class="close-c" href="#contact">Contato</a>
             </div>
         </div>
-        <script type="text/javascript" src="jquery.js"></script>
-        <script type="text/javascript" src="project.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
     </body>
 </html>
