--- a/project2.html
+++ b/project2.html
@@ -7,6 +7,7 @@
         <link href="css/bootstrap.min.css">
         <script type="js/bootstrap.bundle.min"></script>
         <script type="text/jquery-3.5.1.min"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#141414"/>
@@ -27,7 +28,7 @@
         <section id="description">
             <h1>Lista de contatos</h1>
             <div class="description_box">
-                <img id="display" src="./images/project2display.png" alt="Lista de contatos">
+                <img id="display" class="img-fluid" src="./images/project2display.png" alt="Lista de contatos">
                 <h2>Lista que salva o nome, o telefone e o e-mail de contatos usando javascript. <a id="acess" href="./contatos/index.html">Clique aqui para acessar.</a></h2>
 
                 <a id="back" href="./index.html"><h3>Voltar</h3></a>
@@ -45,12 +46,14 @@
         <div id="mobile_menu" class="overlay">
             <a class="close">&times;</a>
             <div class="overlay_content">
-                <a href="#about">Sobre</a>
-                <a href="#projects">Projetos</a>
-                <a href="#contact">Contato</a>
+              <a class="close-s" href="#about">Sobre</a>
+              <a class="close-p" href="#projects">Projetos</a>
+              <a class="close-c" href="#contact">Contato</a>
             </div>
         </div>
-        <script type="text/javascript" src="jquery.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
         <script type="text/javascript" src="project.js"></script>
     </body>
 </html>
