--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
         <link rel="manifest" href="manifest.json">
         <link rel="register" href="register.js">
+        <link rel="sw" href="sw.js">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
