--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <meta name="theme-color" content="#141414"/>
         <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
         <link rel="manifest" href="manifest.json">
-        <link rel="register" href="register.js">
-        <link rel="sw" href="sw.js">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -145,5 +143,7 @@
         <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
         <script type="text/javascript" src="script.js"></script>
+        <script type="register" src="register.js"></script>
+        <script type="sw" src="sw.js"></script>
     </body>
 </html>
