--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#141414"/>
-        <link rel="shortcut icon" href="./favicon.png" type="image/x-png">
+        <link rel="shortcut icon" href="./favicon.ico">
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
